@@ -1,5 +1,5 @@
 %----------------------------------------------%
-% input parameters                             %
+% input parameters: Classical AMG              %
 % lines starting with % are comments           %
 % must have spaces around the equal sign "="   %
 %----------------------------------------------%
@@ -9,31 +9,36 @@ workdir = ../data/  % work directory, no more than 128 characters
 %----------------------------------------------%
 % problem, solver, and output type             %
 %----------------------------------------------%
-problem_num              = 23     % test problem number 
+
+problem_num              = 10     % test problem number 
 print_level              = 3      % how much information to print out 
-output_type              = 0      % 0 to scree | 1 to file
-solver_type              = 6      % 1 CG | 2 BiCGstab | 3 MinRes | 4 GMRes |
+output_type              = 0      % 0 to screen | 1 to file
+solver_type              = 5      % 1 CG | 2 BiCGstab | 3 MinRes | 4 GMRes |
                                   % 5 vGMRes | 6 vFGMRes | 7 GCG |
+                                  %--------------------------------------
                                   % 21 AMG Solver | 22 FMG Solver |
+                                  %--------------------------------------
                                   % 31 SuperLU | 32 UMFPACK | 33 MUMPS
 
 %----------------------------------------------%
 % parameters for iterative solvers             %
 %----------------------------------------------%
 
-precond_type             = 2      % 0 None | 1 Diag | 2 AMG | 3 FMG | 4 ILU | 5 Schwarz
-itsolver_tol             = 1e-8   % solver tolerance 
-itsolver_maxit           = 100    % maximal iteration number 
-stop_type                = 1      % 1 ||r||/||b|| | 2 ||r||_B/||b||_B | 3 ||r||/||x||  
-itsolver_restart         = 20     % restart number for GMRES
+precond_type             = 2      % 0 None | 1 Diag | 2 AMG | 3 FMG |
+                                  % 4 ILU  | 5 Schwarz
+itsolver_tol             = 1e-6   % solver tolerance 
+itsolver_maxit           = 200    % maximal iteration number 
+stop_type                = 1      % 1 ||r||/||b|| | 2 ||r||_B/||b||_B |
+                                  % 3 ||r||/||x||  
+itsolver_restart         = 50     % restart number for GMRES
 
 %----------------------------------------------%
 % parameters for ILU preconditioners           %
 %----------------------------------------------%
 
-ILU_type                 = 1      % 1 ILUk | 2 ILUt | 3 ILUtp 
-ILU_lfil                 = 0      % level of fill-in for ILUk
-ILU_droptol              = 0.1    % ILU drop tolerance
+ILU_type                 = 2      % 1 ILUk | 2 ILUt | 3 ILUtp 
+ILU_lfil                 = 1      % level of fill-in for ILUk
+ILU_droptol              = 0.001   % ILU drop tolerance
 ILU_permtol              = 0.001  % permutation toleration for ILUtp
 ILU_relax                = 0.9    % add dropped entries to diagonal with relaxation
 
@@ -44,20 +49,24 @@ ILU_relax                = 0.9    % add dropped entries to diagonal with relaxat
 Schwarz_mmsize           = 200    % max block size
 Schwarz_maxlvl           = 2      % level used to form blocks
 Schwarz_type             = 1      % 1 forward | 2 backward | 3 symmetric
+Schwarz_blksolver        = 0      % sub-block solvers: 0 iterative |
+                                  % 31 SuperLU | 32 UMFPack | 33 MUMPS
 
 %----------------------------------------------%
 % parameters for multilevel iteration          %
 %----------------------------------------------%
 
-AMG_type                 = C      % C classic AMG
+AMG_type                 = UA      % C classic AMG
                                   % SA smoothed aggregation
                                   % UA unsmoothed aggregation
-AMG_cycle_type           = W      % V V-cycle | W W-cycle
+AMG_cycle_type           = V      % V V-cycle | W W-cycle
                                   % A AMLI-cycle | NA Nonlinear AMLI-cycleA
-AMG_tol                  = 1e-8   % tolerance for AMG
+AMG_tol                  = 1e-6   % tolerance for AMG
 AMG_maxit                = 1      % number of AMG iterations
 AMG_levels               = 20     % max number of levels
 AMG_coarse_dof           = 100    % max number of coarse degrees of freedom
+AMG_coarse_solver        = 0      % coarsest solver: 0 iterative |
+                                  % 31 SuperLU | 32 UMFPack | 33 MUMPS
 AMG_coarse_scaling       = OFF    % switch of scaling of the coarse grid correction
 AMG_amli_degree          = 2      % degree of the polynomial used by AMLI cycle
 AMG_nl_amli_krylov_type  = 6	  % Krylov method in NLAMLI cycle: 6 FGMRES | 7 GCG
@@ -71,7 +80,7 @@ AMG_smoother             = GS     % GS | JACOBI | SGS SOR | SSOR |
 AMG_smooth_order         = CF     % NO: natural order | CF: CF order
 AMG_ILU_levels           = 1      % number of levels using ILU smoother
 AMG_Schwarz_levels       = 0	  % number of levels using Schwarz smoother
-AMG_relaxation	         = 1.1    % relaxation parameter for SOR smoother 
+AMG_relaxation	         = 1.0    % relaxation parameter for SOR smoother 
 AMG_polynomial_degree	 = 3      % degree of the polynomial smoother
 AMG_presmooth_iter       = 1      % number of presmoothing sweeps
 AMG_postsmooth_iter      = 1      % number of postsmoothing sweeps
@@ -83,16 +92,19 @@ AMG_postsmooth_iter      = 1      % number of postsmoothing sweeps
 AMG_coarsening_type      = 1      % 1 Modified RS
                                   % 3 Compatible Relaxation
                                   % 4 Aggressive 
-AMG_interpolation_type   = 1      % 1 Direct | 2 Standard | 3 Energy-min
-AMG_strong_threshold     = 0.25   % Strong threshold
-AMG_truncation_threshold = 0.4    % Truncation threshold
+AMG_interpolation_type   = 2      % 1 Direct | 2 Standard | 3 Energy-min
+AMG_strong_threshold     = 0.3    % Strong threshold
+AMG_truncation_threshold = 0.1    % Truncation threshold
 AMG_max_row_sum          = 0.9    % Max row sum
 
 %----------------------------------------------%
 % parameters for aggregation-type AMG SETUP    %
 %----------------------------------------------%
 
-AMG_strong_coupled       = 0.04   % Strong coupled threshold
-AMG_max_aggregation      = 20     % Max size of aggregations
+AMG_aggregation_type     = 2      % 1 Matching | 2 VMB 
+AMG_pair_number          = 2      % Number of pairs in matching
+AMG_strong_coupled       = 0.00   % Strong coupled threshold
+AMG_max_aggregation      = 10     % Max size of aggregations
 AMG_tentative_smooth     = 0.67   % Smoothing factor for tentative prolongation
 AMG_smooth_filter        = OFF    % Switch for filtered matrix for smoothing
+AMG_quality_bound        = 8.0    % quality of aggregation: 8.0 sysmm | 10.0 unsymm
